Fix table layout width to 100%, to avoid it becoming way wider than the browser window, which makes it hard to read the actual results.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/giella-core@180065 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/scripts/style/gramcheck.css
+++ b/scripts/style/gramcheck.css
@@ -2,6 +2,11 @@
  * browsers.
  */
 
+table {
+  width: 100%;
+  table-layout: fixed;
+}
+
 #results {
     display: table-cell;
     padding: 0.2em;
